Add configuration instructions for Java 21 unit testing